fixtures/errors/atomics_oob.js
Atomics.load(new Int32Array(new SharedArrayBuffer(4)), 2);
